# moet

./: README.md  pyproject.toml
examples/: depth_experiment.py  scratch.py  trees.py  vi.py
moet/: io.py  model.py  trees.py  utils.py
notebooks/: joao_adev_scratch.ipynb  structure_learning.ipynb
notebooks/.ipynb_checkpoints/: mrb_variance-checkpoint.ipynb
tests/: test_mixture_model.py
