[project]
name = "moet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.20.2",
    "black>=25.1.0",
    "genjax>=0.10.3",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "jax[cuda12]>=0.5.3",
    "jaxtyping>=0.2.38",
    "kaleido==0.2",
    "nbformat>=5.10.4",
    "optax>=0.2.4",
    "penzai>=0.2.4",
    "plotly[express]>=6.0.1",
    "plotnine>=0.14.5",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "rustworkx>=0.16.0",
    "tqdm>=4.67.1",
]
